--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ nav ul li a:hover {
 }
 
 #hero {
-    background-image: url('https://source.unsplash.com/1200x400/?nature,water');
+    background-image: url('assets/amajkwebsitebackground.png');
     background-size: cover;
     color: #fff;
     padding: 100px 0;
