--- a/shop/styles.css
+++ b/shop/styles.css
@@ -6,8 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-    overflow: auto;
+    min-height: 100vh;
 }
 
 nav {
@@ -44,7 +43,7 @@ nav ul li a:hover {
 
 header {
     text-align: center;
-    margin-top: 80px;
+    margin-top: 60px;
     margin-bottom: 20px;
 }
 
@@ -168,6 +167,7 @@ footer p {
     right: 10px;
     font-size: 1.5em;
     cursor: pointer;
+    color: #ffffff;
 }
 
 .popup-content h2 {
