--- a/404.css
+++ b/404.css
@@ -1,324 +1,68 @@
-/*
- * Glitch - 404 Page
- * Build Date: October 2016
- * Author: joashp
- */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
-@import url(https://fonts.googleapis.com/css?family=Varela);
-
-/*
- * http://meyerweb.com/eric/tools/css/reset/ 
- * v2.0 | 20110126
- * License: none (public domain)
- */
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font - size: 100 %;
-    font: inherit;
-    vertical - align: baseline;
+// helper
+.center-xy {
+  // width: inherit;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  position: absolute;
 }
 
+html, body {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 16px;
+}
 
-/* HTML5 display-role reset for older browsers */
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-main {
-    display: block;
+html {
+  box-sizing: border-box;
+  user-select: none;
 }
 
 body {
-    line - height: 1;
+  background-color: #000;
 }
 
-ol,
-ul {
-    list - style: none;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-blockquote,
-q {
-    quotes: none;
+.container {
+  width: 100%;
 }
 
-blockquote: before,
-blockquote: after,
-q: before,
-q: after {
-    content: '';
-    content: none;
+.copy-container {
+  text-align: center;
 }
 
-table {
-    border - collapse: collapse;
-    border - spacing: 0;
+p {
+  color: #fff;
+  font-size: 24px;
+  letter-spacing: .2px;
+  margin: 0;
 }
 
-
-/* ---------------glitch 404 style---------------------- */
-
-html {
-    background: radial-gradient(#000, #111);
-    color: white;
-    overflow: hidden;
-    height: 100%;
-    user-select: none;
+.handle {
+  background: #ffe500;
+  width: 14px;
+  height: 30px;
+  top: 0;
+  left: 0;
+  margin-top: 1px;
+  position: absolute;
 }
 
-.error-code {
-    font-family: 'Varela', sans-serif;
-    text-align: center;
-    font-size: 95px;
-    font-style: italic;
-    text-align: center;
-    width: 100px;
-    height: 60px;
-    line-height: 60px;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: -60px;
-    right: 0;
-    animation: noise 2s linear infinite;
-    overflow: default;
-}
+#cb-replay {
+  fill: #666;
+  width: 20px;
+  margin: 15px;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  overflow: inherit;
+  cursor: pointer;
 
-.error-code:after {
-    font-family: 'Varela', sans-serif;
-    content: '404';
-    font-size: 100px;
-    font-style: italic;
-    text-align: center;
-    width: 150px;
-    height: 60px;
-    line-height: 60px;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    color: blue;
-    animation: noise-1 .2s linear infinite;
-}
-
-.info {
-    text-align: center;
-    font-size: 15px;
-    font-style: italic;
-    text-align: center;
-    width: 200px;
-    height: 60px;
-    line-height: 60px;
-    margin: auto;
-    position: absolute;
-    top: 140px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    animation: noise-3 1s linear infinite;
-}
-
-.error-code:before {
-    font-family: 'Varela', sans-serif;
-    content: '404';
-    font-size: 100px;
-    font-style: italic;
-    text-align: center;
-    width: 100px;
-    height: 60px;
-    line-height: 60px;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    color: red;
-    animation: noise-2 .2s linear infinite;
-}
-
-@keyframes noise-1 {
-    0%,
-    20%,
-    40%,
-    60%,
-    70%,
-    90% {
-        opacity: 0;
-    }
-    10% {
-        opacity: .1;
-    }
-    50% {
-        opacity: .5;
-        left: -6px;
-    }
-    80% {
-        opacity: .3;
-    }
-    100% {
-        opacity: .6;
-        left: 2px;
-    }
-}
-
-@keyframes noise-2 {
-    0%,
-    20%,
-    40%,
-    60%,
-    70%,
-    90% {
-        opacity: 0;
-    }
-    10% {
-        opacity: .1;
-    }
-    50% {
-        opacity: .5;
-        left: 6px;
-    }
-    80% {
-        opacity: .3;
-    }
-    100% {
-        opacity: .6;
-        left: -2px;
-    }
-}
-
-@keyframes noise {
-    0%,
-    3%,
-    5%,
-    42%,
-    44%,
-    100% {
-        opacity: 1;
-        transform: scaleY(1);
-    }
-    4.3% {
-        opacity: 1;
-        transform: scaleY(1.7);
-    }
-    43% {
-        opacity: 1;
-        transform: scaleX(1.5);
-    }
-}
-
-@keyframes noise-3 {
-    0%,
-    3%,
-    5%,
-    42%,
-    44%,
-    100% {
-        opacity: 1;
-        transform: scaleY(1);
-    }
-    4.3% {
-        opacity: 1;
-        transform: scaleY(4);
-    }
-    43% {
-        opacity: 1;
-        transform: scaleX(10) rotate(60deg);
-    }
+  &:hover {
+    fill: #888;
+  }
 }
